# great-docs-demo

./: .gitignore  _quarto.yml  great-docs-demo.qmd  great-docs.yml  pyproject.toml
.github/workflows/: docs.yml
dev/: myfunc.qmd
src/great_docs_demo/: __init__.py  myfunc.py
user_guide/dev/: myfunc.md
